# iotbot

./: CMakeLists.txt  Dockerfile  README.md  package.xml
iotbot_interface/: CMakeLists.txt  README.md  package.xml
iotbot_interface/msg/: Battery.msg  RotationSpeed.msg
iotbot_motion_control/: CMakeLists.txt  README.md  package.xml
iotbot_motion_control/src/: RobotParams.h  iotbot_motion_control.cpp  iotbot_motion_control.hpp  iotbot_motion_control_node.cpp  iotbot_motion_differential_node.cpp  iotbot_motion_omnidirectional_node.cpp  iotbot_robot_params.h
iotbot_shield/: CMakeLists.txt  README.md  package.xml  serial_port_params.txt
iotbot_shield/src/: IOTShield.cpp  IOTShield.h  Makefile  SerialPort.cpp  SerialPort.h  iotbot_shield.cpp  iotbot_shield.hpp  iotbot_shield_node.cpp  iotbot_uart_protocol.h  iotshield_test.cpp  uartProtocol.h
src/: IOTBot.cpp  IOTBot.h  IOTShield.cpp  IOTShield.h  IotBot.cpp  IotBot.h  SerialPort.cpp  SerialPort.h  iotbot_node.cpp
